; ModuleID = '/home/carl/AnghaBench/linux/net/sunrpc/extr_clnt.c_rpc_setup_pipedir.c'
source_filename = "/home/carl/AnghaBench/linux/net/sunrpc/extr_clnt.c_rpc_setup_pipedir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.super_block = type { i32 }
%struct.rpc_clnt = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32* }
%struct.dentry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.super_block*, %struct.rpc_clnt*)* @rpc_setup_pipedir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rpc_setup_pipedir(%struct.super_block* %0, %struct.rpc_clnt* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.super_block*, align 8
  %5 = alloca %struct.rpc_clnt*, align 8
  %6 = alloca %struct.dentry*, align 8
  store %struct.super_block* %0, %struct.super_block** %4, align 8
  store %struct.rpc_clnt* %1, %struct.rpc_clnt** %5, align 8
  %7 = load %struct.rpc_clnt*, %struct.rpc_clnt** %5, align 8
  %8 = getelementptr inbounds %struct.rpc_clnt, %struct.rpc_clnt* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %24

13:                                               ; preds = %2
  %14 = load %struct.super_block*, %struct.super_block** %4, align 8
  %15 = load %struct.rpc_clnt*, %struct.rpc_clnt** %5, align 8
  %16 = call %struct.dentry* @rpc_setup_pipedir_sb(%struct.super_block* %14, %struct.rpc_clnt* %15)
  store %struct.dentry* %16, %struct.dentry** %6, align 8
  %17 = load %struct.dentry*, %struct.dentry** %6, align 8
  %18 = call i64 @IS_ERR(%struct.dentry* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %13
  %21 = load %struct.dentry*, %struct.dentry** %6, align 8
  %22 = call i32 @PTR_ERR(%struct.dentry* %21)
  store i32 %22, i32* %3, align 4
  br label %25

23:                                               ; preds = %13
  br label %24

24:                                               ; preds = %23, %2
  store i32 0, i32* %3, align 4
  br label %25

25:                                               ; preds = %24, %20
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local %struct.dentry* @rpc_setup_pipedir_sb(%struct.super_block*, %struct.rpc_clnt*) #1

declare dso_local i64 @IS_ERR(%struct.dentry*) #1

declare dso_local i32 @PTR_ERR(%struct.dentry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
